--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block app_content %}
-    <h1>An unexpected error has occurred</h1>
+    <h1>{{ _('An unexpected error has occurred') }}</h1>
     <p>Oops.</p>
-    <p><a href='{{ url_for("index") }}'>Home</a></p>
+    <p><a href='{{ url_for("index") }}'>{{ _l('Home') }}</a></p>
 {% endblock %}
