--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,17 +7,6 @@
     {% if form %}
         {{ wtf.quick_form(form) }}
         <br>
-        <!-- <form action='' method='post'> -->
-        <!--     {{ form.hidden_tag() }} -->
-        <!--         <p> -->
-        <!--             {{ form.post.label }}<br> -->
-        <!--             {{ form.post(cols=32, rows=4) }} -->
-        <!--             {% for error in form.post.errors %} -->
-        <!--                 <span style='color: red'>[{{ error }}]</span> -->
-        <!--             {% endfor %} -->
-        <!--         </p> -->
-        <!--         <p>{{ form.submit() }}</p> -->
-        <!-- </form> -->
     {% endif %}
 
     {% for post in posts %}
@@ -28,12 +17,12 @@
         <ul class='pager'>
             <li class='previous{% if not prev_url %} disabled{% endif %}'>
                 <a href='{{ prev_url or "#" }}'>
-                    <span aria-hidden='true'>&larr;</span>Newer posts
+                    <span aria-hidden='true'>&larr;</span>{{ _('Newer posts') }}
                 </a>
             </li>
             <li class='next{% if not next_url %} disabled{% endif %}'>
                 <a href='{{ next_url or "#" }}'>
-                    Older posts<span aria-hidden='true'>&rarr;</span>
+                    {{ _('Older posts') }}<span aria-hidden='true'>&rarr;</span>
                 </a>
             </li>
         </ul>
